--- a/scripts/old/full-text-search.ipynb
+++ b/scripts/old/full-text-search.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 92,
    "id": "05b2b441",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "id": "b23ccfce",
    "metadata": {},
    "outputs": [],
@@ -38,8 +38,269 @@
     "kwords = pd.read_csv(os.getcwd().replace('scripts/old', 'data')+'/technical_buzzwords.csv')\n",
     "words = pd.DataFrame(columns = ['topic', 'keywords'])\n",
     "for i in range(kwords.shape[0]):\n",
-    "    words.loc[len(words.index)] = [kwords.iat[i,0], kwords.iat[i,1].split(\", \")]\n",
+    "    words.loc[len(words.index)] = [kwords.iat[i,0], str(kwords.iat[i,1]).split(\", \")]\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "b2b52fa4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>buzzword</th>\n",
+       "      <th>terms</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AI and Machine Learning</td>\n",
+       "      <td>Artificial Intelligence, Machine Learning, Sup...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Big Data</td>\n",
+       "      <td>Hadoop, NoSQL, Apache Flink, Apache Kafka, Big...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Blockchain and Cryptocurrency</td>\n",
+       "      <td>Blockchain, Cryptocurrency, Bitcoin, Ethereum,...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IoT</td>\n",
+       "      <td>Smart Medical Device, Industrial IoT, Home Aut...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AR and VR</td>\n",
+       "      <td>Augmented Reality, Virtual Reality, Mixed Real...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Cybersecurity</td>\n",
+       "      <td>Cybersecurity, Ethical Hacking, Intrusion Dete...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Automation</td>\n",
+       "      <td>Automation, Industrial Automation, Home Automa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Modeling</td>\n",
+       "      <td>Modeling, Modelling, ArcGIS, HEC-RAS, MIKE, FL...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NLP</td>\n",
+       "      <td>NLP, Natural Language Processing, Sentiment An...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Quantum Computing</td>\n",
+       "      <td>Quantum Computing, Quantum Algorithm, Quantum ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>5G</td>\n",
+       "      <td>5G, Massive MIMO, Beamforming, Network Slicing...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Cloud Computing</td>\n",
+       "      <td>Cloud Computing, Microsoft Azure, Amazon AWS, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Edge Computing</td>\n",
+       "      <td>Edge Computing, Fog Computing, Mobile Edge Com...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Data Analytics</td>\n",
+       "      <td>Data Analytics, Business Intelligence, Data Vi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Biotechnology</td>\n",
+       "      <td>Biotechnology, Genetic Engineering, Bioinforma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Nanotechnology</td>\n",
+       "      <td>Nanotechnology, Graphene Research, Quantum Dot...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Wearable Technology</td>\n",
+       "      <td>Wearable Technology, Fitness Tracker, Smartwat...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Voice User Interface (VUI)</td>\n",
+       "      <td>Voice User Interface, VUI, Amazon Alexa, Googl...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>FinTech</td>\n",
+       "      <td>FinTech, Mobile Payments, Cryptocurrency, Robo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Data Mining</td>\n",
+       "      <td>Data Mining, Association Rule Learning, Cluste...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Predictive Analysis</td>\n",
+       "      <td>Predictive Analysis, Fraud Detection, Risk Ass...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Chatbots</td>\n",
+       "      <td>Chatbots, Customer Service Bots, Virtual Healt...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>3D Printing</td>\n",
+       "      <td>3D Printing, 3-D Printing Additive Manufacturi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Smart Cities</td>\n",
+       "      <td>Smart Cities, Smart City, Intelligent Traffic ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Regtech</td>\n",
+       "      <td>Regtech, Regulatory Reporting, Risk Management...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Insurtech</td>\n",
+       "      <td>Insurtech, Peer-To-Peer Insurance, On-Demand I...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>E-Commerce</td>\n",
+       "      <td>E-Commerce, Mobile Commerce, Social Commerce, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Serverless Computing</td>\n",
+       "      <td>Serverless Computing, AWS Lambda, Google Cloud...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Software/Platform/Infrastructure as a Service</td>\n",
+       "      <td>Software as a Service, Platform as a Service, ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Web Applications</td>\n",
+       "      <td>Web Application, Front-end, Back-end, Client-s...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         buzzword  \\\n",
+       "0                         AI and Machine Learning   \n",
+       "1                                        Big Data   \n",
+       "2                   Blockchain and Cryptocurrency   \n",
+       "3                                             IoT   \n",
+       "4                                       AR and VR   \n",
+       "5                                   Cybersecurity   \n",
+       "6                                      Automation   \n",
+       "7                                        Modeling   \n",
+       "8                                             NLP   \n",
+       "9                               Quantum Computing   \n",
+       "10                                             5G   \n",
+       "11                                Cloud Computing   \n",
+       "12                                 Edge Computing   \n",
+       "13                                 Data Analytics   \n",
+       "14                                  Biotechnology   \n",
+       "15                                 Nanotechnology   \n",
+       "16                            Wearable Technology   \n",
+       "17                     Voice User Interface (VUI)   \n",
+       "18                                        FinTech   \n",
+       "19                                    Data Mining   \n",
+       "20                            Predictive Analysis   \n",
+       "21                                       Chatbots   \n",
+       "22                                    3D Printing   \n",
+       "23                                   Smart Cities   \n",
+       "24                                        Regtech   \n",
+       "25                                      Insurtech   \n",
+       "26                                     E-Commerce   \n",
+       "27                           Serverless Computing   \n",
+       "28  Software/Platform/Infrastructure as a Service   \n",
+       "29                               Web Applications   \n",
+       "\n",
+       "                                                terms  \n",
+       "0   Artificial Intelligence, Machine Learning, Sup...  \n",
+       "1   Hadoop, NoSQL, Apache Flink, Apache Kafka, Big...  \n",
+       "2   Blockchain, Cryptocurrency, Bitcoin, Ethereum,...  \n",
+       "3   Smart Medical Device, Industrial IoT, Home Aut...  \n",
+       "4   Augmented Reality, Virtual Reality, Mixed Real...  \n",
+       "5   Cybersecurity, Ethical Hacking, Intrusion Dete...  \n",
+       "6   Automation, Industrial Automation, Home Automa...  \n",
+       "7   Modeling, Modelling, ArcGIS, HEC-RAS, MIKE, FL...  \n",
+       "8   NLP, Natural Language Processing, Sentiment An...  \n",
+       "9   Quantum Computing, Quantum Algorithm, Quantum ...  \n",
+       "10  5G, Massive MIMO, Beamforming, Network Slicing...  \n",
+       "11  Cloud Computing, Microsoft Azure, Amazon AWS, ...  \n",
+       "12  Edge Computing, Fog Computing, Mobile Edge Com...  \n",
+       "13  Data Analytics, Business Intelligence, Data Vi...  \n",
+       "14  Biotechnology, Genetic Engineering, Bioinforma...  \n",
+       "15  Nanotechnology, Graphene Research, Quantum Dot...  \n",
+       "16  Wearable Technology, Fitness Tracker, Smartwat...  \n",
+       "17  Voice User Interface, VUI, Amazon Alexa, Googl...  \n",
+       "18  FinTech, Mobile Payments, Cryptocurrency, Robo...  \n",
+       "19  Data Mining, Association Rule Learning, Cluste...  \n",
+       "20  Predictive Analysis, Fraud Detection, Risk Ass...  \n",
+       "21  Chatbots, Customer Service Bots, Virtual Healt...  \n",
+       "22  3D Printing, 3-D Printing Additive Manufacturi...  \n",
+       "23  Smart Cities, Smart City, Intelligent Traffic ...  \n",
+       "24  Regtech, Regulatory Reporting, Risk Management...  \n",
+       "25  Insurtech, Peer-To-Peer Insurance, On-Demand I...  \n",
+       "26  E-Commerce, Mobile Commerce, Social Commerce, ...  \n",
+       "27  Serverless Computing, AWS Lambda, Google Cloud...  \n",
+       "28  Software as a Service, Platform as a Service, ...  \n",
+       "29  Web Application, Front-end, Back-end, Client-s...  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kwords"
    ]
   },
   {
