--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "757d7b84",
+   "id": "9484915b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a66bb87c",
+   "id": "7c617bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e2a1ca07",
+   "execution_count": 28,
+   "id": "68a433f1",
    "metadata": {},
    "outputs": [
     {
@@ -67,59 +67,149 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>doi</th>\n",
-       "      <th>buzz_id</th>\n",
-       "      <th>category</th>\n",
-       "      <th>subword</th>\n",
-       "      <th>count</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "      <th>9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>20</th>\n",
+       "      <th>21</th>\n",
+       "      <th>22</th>\n",
+       "      <th>23</th>\n",
+       "      <th>24</th>\n",
+       "      <th>25</th>\n",
+       "      <th>26</th>\n",
+       "      <th>27</th>\n",
+       "      <th>28</th>\n",
+       "      <th>29</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>10.1016/j.advwatres.2023.104474</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Modeling</td>\n",
-       "      <td>modeling</td>\n",
-       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>10.1016/j.advwatres.2023.104474</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Modeling</td>\n",
-       "      <td>simulation</td>\n",
-       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>10.1016/j.advwatres.2023.104474</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Modeling</td>\n",
-       "      <td>model validation</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10.1016/j.advwatres.2023.104475</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Blockchain and Cryptocurrency</td>\n",
-       "      <td>block</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>10.1016/j.advwatres.2023.104475</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Modeling</td>\n",
-       "      <td>modeling</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -129,143 +219,207 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>179752</th>\n",
-       "      <td>26473</td>\n",
-       "      <td>10.1016/j.envsoft.2017.09.002</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Modeling</td>\n",
-       "      <td>model development</td>\n",
+       "      <th>25848</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25849</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>50</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25850</th>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14</td>\n",
+       "      <td>12</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>179753</th>\n",
-       "      <td>26473</td>\n",
-       "      <td>10.1016/j.envsoft.2017.09.002</td>\n",
-       "      <td>7</td>\n",
-       "      <td>Modeling</td>\n",
-       "      <td>model complexity</td>\n",
+       "      <th>25851</th>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>27</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25852</th>\n",
+       "      <td>9152</td>\n",
+       "      <td>3705</td>\n",
+       "      <td>6610</td>\n",
+       "      <td>1650</td>\n",
+       "      <td>2136</td>\n",
+       "      <td>2156</td>\n",
+       "      <td>2575</td>\n",
+       "      <td>17674</td>\n",
+       "      <td>305</td>\n",
+       "      <td>1211</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5525</td>\n",
+       "      <td>564</td>\n",
+       "      <td>3081</td>\n",
+       "      <td>8065</td>\n",
+       "      <td>880</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179754</th>\n",
-       "      <td>26473</td>\n",
-       "      <td>10.1016/j.envsoft.2017.09.002</td>\n",
-       "      <td>29</td>\n",
-       "      <td>Web Applications</td>\n",
-       "      <td>user interface</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179755</th>\n",
-       "      <td>26473</td>\n",
-       "      <td>10.1016/j.envsoft.2017.09.002</td>\n",
-       "      <td>29</td>\n",
-       "      <td>Web Applications</td>\n",
-       "      <td>application programming interface</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>179756</th>\n",
-       "      <td>26473</td>\n",
-       "      <td>10.1016/j.envsoft.2017.09.002</td>\n",
-       "      <td>29</td>\n",
-       "      <td>Web Applications</td>\n",
-       "      <td>database</td>\n",
-       "      <td>49</td>\n",
+       "      <td>83</td>\n",
+       "      <td>565</td>\n",
+       "      <td>2122</td>\n",
+       "      <td>11089</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>179757 rows × 6 columns</p>\n",
+       "<p>25853 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        index                              doi  buzz_id  \\\n",
-       "0           0  10.1016/j.advwatres.2023.104474        7   \n",
-       "1           0  10.1016/j.advwatres.2023.104474        7   \n",
-       "2           0  10.1016/j.advwatres.2023.104474        7   \n",
-       "3           1  10.1016/j.advwatres.2023.104475        2   \n",
-       "4           1  10.1016/j.advwatres.2023.104475        7   \n",
-       "...       ...                              ...      ...   \n",
-       "179752  26473    10.1016/j.envsoft.2017.09.002        7   \n",
-       "179753  26473    10.1016/j.envsoft.2017.09.002        7   \n",
-       "179754  26473    10.1016/j.envsoft.2017.09.002       29   \n",
-       "179755  26473    10.1016/j.envsoft.2017.09.002       29   \n",
-       "179756  26473    10.1016/j.envsoft.2017.09.002       29   \n",
+       "         0     1     2     3     4     5     6      7    8     9   ...    20  \\\n",
+       "0         0     0     0     0     0     0     0     33    0     0  ...     0   \n",
+       "1         0     0     2     0     0     0     0     25    0     0  ...     0   \n",
+       "2         0     0     0     0     0     0     0      4    0     0  ...     0   \n",
+       "3         0     0     0     0     0     0     0     35    0     0  ...     0   \n",
+       "4         0     0     0     0     0     0     0     29    0     0  ...     0   \n",
+       "...     ...   ...   ...   ...   ...   ...   ...    ...  ...   ...  ...   ...   \n",
+       "25848     2     3     0     0     0     0     0     13    0     0  ...     0   \n",
+       "25849     0     0     0     0     1     0     0     50    0     0  ...     0   \n",
+       "25850     0    12     0     0     0     0     0     70    0     0  ...     0   \n",
+       "25851     0    30     4     0     0     0     0     77    0     0  ...     0   \n",
+       "25852  9152  3705  6610  1650  2136  2156  2575  17674  305  1211  ...  5525   \n",
        "\n",
-       "                             category                            subword  \\\n",
-       "0                            Modeling                           modeling   \n",
-       "1                            Modeling                         simulation   \n",
-       "2                            Modeling                   model validation   \n",
-       "3       Blockchain and Cryptocurrency                              block   \n",
-       "4                            Modeling                           modeling   \n",
-       "...                               ...                                ...   \n",
-       "179752                       Modeling                  model development   \n",
-       "179753                       Modeling                   model complexity   \n",
-       "179754               Web Applications                     user interface   \n",
-       "179755               Web Applications  application programming interface   \n",
-       "179756               Web Applications                           database   \n",
+       "        21    22    23   24  25  26   27    28     29  \n",
+       "0        0     0     0    0   0   0    0     0      0  \n",
+       "1        0     0     0    0   0   0    0     0      0  \n",
+       "2        0     0     0    0   0   0    0     0      0  \n",
+       "3        0     0     0    0   0   0    0     0      0  \n",
+       "4        0     0     0    0   0   0    0     0      1  \n",
+       "...    ...   ...   ...  ...  ..  ..  ...   ...    ...  \n",
+       "25848    0     0     0    0   0   0    0     0      0  \n",
+       "25849    0     0     0    0   0   0    0     1      4  \n",
+       "25850    0     0     1    0   0   0   14    12      3  \n",
+       "25851    0     0     0    0   0   0   28    27      8  \n",
+       "25852  564  3081  8065  880   1  83  565  2122  11089  \n",
        "\n",
-       "        count  \n",
-       "0           8  \n",
-       "1          24  \n",
-       "2           1  \n",
-       "3           2  \n",
-       "4           2  \n",
-       "...       ...  \n",
-       "179752      3  \n",
-       "179753      1  \n",
-       "179754      2  \n",
-       "179755      1  \n",
-       "179756     49  \n",
-       "\n",
-       "[179757 rows x 6 columns]"
+       "[25853 rows x 30 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "buzzwords_in_papers"
+    "buzzword_encoding"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "831b1dc5",
+   "execution_count": 25,
+   "id": "c3f30ada",
    "metadata": {},
    "outputs": [],
    "source": [
-    "buzzword_encoding = pd.DataFrame(columns = range(30))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "cb8f3b9a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(len(set(buzzwords_in_papers['index'].tolist()))):\n",
-    "    tmp = buzzwords_in_papers[buzzwords_in_papers['index'] == i]\n",
-    "    \n",
-    "    grouped = tmp.groupby('buzz_id').sum()\n",
-    "    \n",
-    "    row = [0]*30\n",
-    "    \n",
-    "    for j in grouped.index.tolist():\n",
-    "        row[j] += grouped.loc[j]['count']\n",
-    "    buzzword_encoding.loc[len(buzzword_encoding.index)] = row\n",
+    "j = 0\n",
+    "prev = 0\n",
+    "for i in range(buzzwords_in_papers.shape[0]):\n",
+    "    if buzzwords_in_papers.iat[i,0] != prev:\n",
+    "        prev = buzzwords_in_papers.iat[i,0]\n",
+    "        j+=1\n",
+    "    buzzwords_in_papers.iat[i,0] = j\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "8fcc4b63",
+   "id": "09f1de42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b9d32d5b",
+   "id": "3ae8c1c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "5b52506d",
+   "id": "d0363a84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c4bddb8b",
+   "id": "f03a016f",
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76653cda",
+   "id": "e3209674",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -356,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ca20785",
+   "id": "3267ceee",
    "metadata": {},
    "outputs": [],
    "source": []
