--- a/scripts/LDAAnalysis.ipynb
+++ b/scripts/LDAAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "7069e06e",
    "metadata": {},
    "outputs": [],
@@ -38,12 +38,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c7a6b010",
    "metadata": {},
    "outputs": [],
    "source": [
-    "buzz_found = pd.read_csv(os.getcwd()+'/found_buzzwords_final.csv')"
+    "buzz_found = pd.read_csv(os.getcwd()+'/found_buzzwords_step2.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0d1d0370",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "21275"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(set(buzz_found['index'].tolist()))"
    ]
   },
   {
@@ -1248,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "dd09b079",
    "metadata": {},
    "outputs": [],
@@ -1258,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "a8597fe6",
    "metadata": {},
    "outputs": [
@@ -1403,93 +1424,93 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9997</th>\n",
-       "      <td>24737</td>\n",
-       "      <td>27</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>21270</th>\n",
+       "      <td>26469</td>\n",
+       "      <td>28</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2018</td>\n",
        "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
-       "      <td>10.1016/j.ecolmodel.2020.109280</td>\n",
-       "      <td>2020-11-15</td>\n",
-       "      <td>S0304380020303501</td>\n",
-       "      <td>2-s2.0-85090927013</td>\n",
-       "      <td>8.509093e+10</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>23024388700, 7101905813, 35361990500, 66029039...</td>\n",
-       "      <td>60017028:60113653:125122077:60084653:60000961</td>\n",
+       "      <td>10.1016/j.envsoft.2017.09.020</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>S1364815217304140</td>\n",
+       "      <td>2-s2.0-85032268729</td>\n",
+       "      <td>8.503227e+10</td>\n",
+       "      <td>142.0</td>\n",
+       "      <td>34571084000, 55188785600, 33767605600, 5721638...</td>\n",
+       "      <td>60016437:60012197:60012197:60012197, 60025278:...</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9998</th>\n",
-       "      <td>24738</td>\n",
-       "      <td>27</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>21271</th>\n",
+       "      <td>26470</td>\n",
+       "      <td>28</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2018</td>\n",
        "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
-       "      <td>10.1016/j.ecolmodel.2020.109286</td>\n",
-       "      <td>2020-11-15</td>\n",
-       "      <td>S0304380020303562</td>\n",
-       "      <td>2-s2.0-85090881697</td>\n",
-       "      <td>8.509088e+10</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>57205669891, 35721643400, 36972298000, 3533988...</td>\n",
-       "      <td>60050715:60050715:60050715:60050715</td>\n",
+       "      <td>10.1016/j.envsoft.2017.09.010</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>S1364815216304005</td>\n",
+       "      <td>2-s2.0-85032353211</td>\n",
+       "      <td>8.503235e+10</td>\n",
+       "      <td>54.0</td>\n",
+       "      <td>37111876100, 15069126500, 57189996027, 3574567...</td>\n",
+       "      <td>60013141:60025182:60025182:60025182:60013141, ...</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9999</th>\n",
-       "      <td>24740</td>\n",
-       "      <td>27</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>21272</th>\n",
+       "      <td>26471</td>\n",
+       "      <td>28</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2018</td>\n",
        "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
-       "      <td>10.1016/j.ecolmodel.2020.109295</td>\n",
-       "      <td>2020-11-15</td>\n",
-       "      <td>S0304380020303653</td>\n",
-       "      <td>2-s2.0-85091224515</td>\n",
-       "      <td>8.509122e+10</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>37032101300, 57219093332, 56024528100, 7003432534</td>\n",
-       "      <td>60019762:60019839:60019839:60019839</td>\n",
+       "      <td>10.1016/j.envsoft.2017.08.002</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>S1364815216309550</td>\n",
+       "      <td>2-s2.0-85032684995</td>\n",
+       "      <td>8.503268e+10</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>7006615627, 49661600900, 15132591800, 66033150...</td>\n",
+       "      <td>60021439:60030486, 109682148:60021439:60021439...</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10000</th>\n",
-       "      <td>24741</td>\n",
-       "      <td>27</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>21273</th>\n",
+       "      <td>26472</td>\n",
+       "      <td>28</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2018</td>\n",
        "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
-       "      <td>10.1016/j.ecolmodel.2020.109292</td>\n",
-       "      <td>2020-11-15</td>\n",
-       "      <td>S0304380020303628</td>\n",
-       "      <td>2-s2.0-85091625576</td>\n",
-       "      <td>8.509163e+10</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>57207691368, 6603286088, 7501733919, 266652024...</td>\n",
-       "      <td>60007566:60007566:119214231:60007566, 60007566...</td>\n",
+       "      <td>10.1016/j.envsoft.2017.09.011</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>S136481521630843X</td>\n",
+       "      <td>2-s2.0-85032736133</td>\n",
+       "      <td>8.503274e+10</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>56111768300, 37010006200, 43361846100, 5611302...</td>\n",
+       "      <td>60068861:60020071:60068861:60024695:60102538:6...</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10001</th>\n",
-       "      <td>24742</td>\n",
-       "      <td>27</td>\n",
-       "      <td>47</td>\n",
-       "      <td>2020</td>\n",
+       "      <th>21274</th>\n",
+       "      <td>26473</td>\n",
+       "      <td>28</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2018</td>\n",
        "      <td>https://www.sciencedirect.com/science/article/...</td>\n",
-       "      <td>10.1016/j.ecolmodel.2020.109288</td>\n",
-       "      <td>2020-11-15</td>\n",
-       "      <td>S0304380020303586</td>\n",
-       "      <td>2-s2.0-85091336554</td>\n",
-       "      <td>8.509134e+10</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>53979681600, 25029632000, 56567543400, 3633767...</td>\n",
-       "      <td>60010307:60010307:60010307:60010307, 105596054...</td>\n",
+       "      <td>10.1016/j.envsoft.2017.09.002</td>\n",
+       "      <td>2018-01-01</td>\n",
+       "      <td>S136481521630648X</td>\n",
+       "      <td>2-s2.0-85034039255</td>\n",
+       "      <td>8.503404e+10</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>52365181700, 22957372900, 7005864023, 89834056...</td>\n",
+       "      <td>60032619, 60032619, 60032619:119771478:6003331...</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10002 rows × 14 columns</p>\n",
+       "<p>21275 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1500,11 +1521,11 @@
        "3               4           1          0  2023   \n",
        "4               5           1          0  2023   \n",
        "...           ...         ...        ...   ...   \n",
-       "9997        24737          27         47  2020   \n",
-       "9998        24738          27         47  2020   \n",
-       "9999        24740          27         47  2020   \n",
-       "10000       24741          27         47  2020   \n",
-       "10001       24742          27         47  2020   \n",
+       "21270       26469          28         68  2018   \n",
+       "21271       26470          28         68  2018   \n",
+       "21272       26471          28         68  2018   \n",
+       "21273       26472          28         68  2018   \n",
+       "21274       26473          28         68  2018   \n",
        "\n",
        "                                                    link  \\\n",
        "0      https://www.sciencedirect.com/science/article/...   \n",
@@ -1513,11 +1534,11 @@
        "3      https://www.sciencedirect.com/science/article/...   \n",
        "4      https://www.sciencedirect.com/science/article/...   \n",
        "...                                                  ...   \n",
-       "9997   https://www.sciencedirect.com/science/article/...   \n",
-       "9998   https://www.sciencedirect.com/science/article/...   \n",
-       "9999   https://www.sciencedirect.com/science/article/...   \n",
-       "10000  https://www.sciencedirect.com/science/article/...   \n",
-       "10001  https://www.sciencedirect.com/science/article/...   \n",
+       "21270  https://www.sciencedirect.com/science/article/...   \n",
+       "21271  https://www.sciencedirect.com/science/article/...   \n",
+       "21272  https://www.sciencedirect.com/science/article/...   \n",
+       "21273  https://www.sciencedirect.com/science/article/...   \n",
+       "21274  https://www.sciencedirect.com/science/article/...   \n",
        "\n",
        "                                   doi        date                pii  \\\n",
        "0      10.1016/j.advwatres.2023.104474  2023-08-01  S0309170823001094   \n",
@@ -1526,11 +1547,11 @@
        "3      10.1016/j.advwatres.2023.104485  2023-08-01  S0309170823001203   \n",
        "4      10.1016/j.advwatres.2023.104441  2023-08-01  S0309170823000763   \n",
        "...                                ...         ...                ...   \n",
-       "9997   10.1016/j.ecolmodel.2020.109280  2020-11-15  S0304380020303501   \n",
-       "9998   10.1016/j.ecolmodel.2020.109286  2020-11-15  S0304380020303562   \n",
-       "9999   10.1016/j.ecolmodel.2020.109295  2020-11-15  S0304380020303653   \n",
-       "10000  10.1016/j.ecolmodel.2020.109292  2020-11-15  S0304380020303628   \n",
-       "10001  10.1016/j.ecolmodel.2020.109288  2020-11-15  S0304380020303586   \n",
+       "21270    10.1016/j.envsoft.2017.09.020  2018-01-01  S1364815217304140   \n",
+       "21271    10.1016/j.envsoft.2017.09.010  2018-01-01  S1364815216304005   \n",
+       "21272    10.1016/j.envsoft.2017.08.002  2018-01-01  S1364815216309550   \n",
+       "21273    10.1016/j.envsoft.2017.09.011  2018-01-01  S136481521630843X   \n",
+       "21274    10.1016/j.envsoft.2017.09.002  2018-01-01  S136481521630648X   \n",
        "\n",
        "                      eid     scopus_id  citations  \\\n",
        "0      2-s2.0-85161258968  8.516126e+10        0.0   \n",
@@ -1539,11 +1560,11 @@
        "3      2-s2.0-85161678744  8.516168e+10        0.0   \n",
        "4      2-s2.0-85161836812  8.516184e+10        0.0   \n",
        "...                   ...           ...        ...   \n",
-       "9997   2-s2.0-85090927013  8.509093e+10        3.0   \n",
-       "9998   2-s2.0-85090881697  8.509088e+10        7.0   \n",
-       "9999   2-s2.0-85091224515  8.509122e+10        4.0   \n",
-       "10000  2-s2.0-85091625576  8.509163e+10       14.0   \n",
-       "10001  2-s2.0-85091336554  8.509134e+10        1.0   \n",
+       "21270  2-s2.0-85032268729  8.503227e+10      142.0   \n",
+       "21271  2-s2.0-85032353211  8.503235e+10       54.0   \n",
+       "21272  2-s2.0-85032684995  8.503268e+10        5.0   \n",
+       "21273  2-s2.0-85032736133  8.503274e+10       45.0   \n",
+       "21274  2-s2.0-85034039255  8.503404e+10       34.0   \n",
        "\n",
        "                                                 authors  \\\n",
        "0                  58307014400, 36008901600, 26635952600   \n",
@@ -1552,11 +1573,11 @@
        "3                                56708113100, 7202660185   \n",
        "4                               57886962200, 36559092800   \n",
        "...                                                  ...   \n",
-       "9997   23024388700, 7101905813, 35361990500, 66029039...   \n",
-       "9998   57205669891, 35721643400, 36972298000, 3533988...   \n",
-       "9999   37032101300, 57219093332, 56024528100, 7003432534   \n",
-       "10000  57207691368, 6603286088, 7501733919, 266652024...   \n",
-       "10001  53979681600, 25029632000, 56567543400, 3633767...   \n",
+       "21270  34571084000, 55188785600, 33767605600, 5721638...   \n",
+       "21271  37111876100, 15069126500, 57189996027, 3574567...   \n",
+       "21272  7006615627, 49661600900, 15132591800, 66033150...   \n",
+       "21273  56111768300, 37010006200, 43361846100, 5611302...   \n",
+       "21274  52365181700, 22957372900, 7005864023, 89834056...   \n",
        "\n",
        "                                            affiliations  open_access  \n",
        "0                             60031268:60031268:60007989         True  \n",
@@ -1565,16 +1586,16 @@
        "3                                      60030447:60007566         True  \n",
        "4                                      60010065:60010065         True  \n",
        "...                                                  ...          ...  \n",
-       "9997       60017028:60113653:125122077:60084653:60000961         True  \n",
-       "9998                 60050715:60050715:60050715:60050715         True  \n",
-       "9999                 60019762:60019839:60019839:60019839         True  \n",
-       "10000  60007566:60007566:119214231:60007566, 60007566...         True  \n",
-       "10001  60010307:60010307:60010307:60010307, 105596054...         True  \n",
+       "21270  60016437:60012197:60012197:60012197, 60025278:...         True  \n",
+       "21271  60013141:60025182:60025182:60025182:60013141, ...         True  \n",
+       "21272  60021439:60030486, 109682148:60021439:60021439...         True  \n",
+       "21273  60068861:60020071:60068861:60024695:60102538:6...         True  \n",
+       "21274  60032619, 60032619, 60032619:119771478:6003331...         True  \n",
        "\n",
-       "[10002 rows x 14 columns]"
+       "[21275 rows x 14 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
