--- a/scripts/LDAAnalysis.ipynb
+++ b/scripts/LDAAnalysis.ipynb
@@ -1649,6 +1649,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "b5b447f6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 116,
    "id": "c2ff4ce4",
    "metadata": {},
@@ -11934,13 +11942,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "id": "7d9186a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pyLDAvis' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [1]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpyLDAvis\u001b[49m\u001b[38;5;241m.\u001b[39menable_notebook()\n\u001b[1;32m      2\u001b[0m LDAvis_data_filepath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./results\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pyLDAvis' is not defined"
+     ]
+    }
+   ],
    "source": [
     "pyLDAvis.enable_notebook()\n",
-    "LDAvis_data_filepath = os.path.join('./results/ldavis_prepared_'+str(num_topics))"
+    "LDAvis_data_filepath = os.path.join('./results')"
    ]
   },
   {
